home insurange page design changes

--- a/src/home-insurance/18-spacer-heater.html
+++ b/src/home-insurance/18-spacer-heater.html
@@ -199,71 +199,58 @@
                             <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title  text-center">Oil Tank Details</h3>
+                        <h3 class="title  text-center">Space Heater</h3>
 
                         <div class="contain-wrapper-sm">
-                            <form class="mt-4 ">
-                                <div class="d-flex justify-content-center">
-                                    <div class="blue-light-box bg-white w-75">
-
-                                        <div class="row g-3">
-                                            <div class="col-md-12 ">
-                                                <h5 class="fs-16">Is Oil Tank Above or Below the Ground</h5>
-                                                <div class="row">
-                                                    <div class="col-6">
-                                                        <label class="radio-inline radio-btn text-center" for="livingAbove">
-                                                            <input class="radio-control" type="radio" name="aboveBelow"
-                                                                value="" id="livingAbove" checked="">
-                                                            <span class="radio-custom"></span>
-                                                            <span class="radio-label fs-14 w-100">Above
-                                                            </span>
-                                                        </label>
-                                                    </div>
-                                                    <div class="col-6">
-                                                        <label class="radio-inline radio-btn  text-center" for="livingBelow">
-                                                            <input class="radio-control" type="radio" name="aboveBelow"
-                                                                value="" id="livingBelow">
-                                                            <span class="radio-custom"></span>
-                                                            <span class="radio-label fs-14 w-100">Below
-                                                            </span>
-                                                        </label>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="col-md-12 ">
-                                                <h5 class="fs-16">Oil tank is in Interior or Exterior</h5>
-                                                <div class="row">
-                                                    <div class="col-6">
-                                                        <label class="radio-inline radio-btn text-center" for="livingYes">
-                                                            <input class="radio-control" type="radio" name="living"
-                                                                value="" id="livingYes" checked="">
-                                                            <span class="radio-custom"></span>
-                                                            <span class="radio-label fs-14 w-100">interior
-                                                            </span>
-                                                        </label>
-                                                    </div>
-                                                    <div class="col-6">
-                                                        <label class="radio-inline radio-btn text-center" for="livingNo">
-                                                            <input class="radio-control" type="radio" name="living"
-                                                                value="" id="livingNo">
-                                                            <span class="radio-custom"></span>
-                                                            <span class="radio-label fs-14 w-100">exterior
-                                                            </span>
-                                                        </label>
+                            <form class="mt-4">
+                                <div class="blue-light-box bg-white w-75 mx-auto">
+                                    <div class="vehicle-details">
+                                        <div class="row gap-3">
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label for="" class="fs-18 font-bold" >Do you have space heaters?</label>
+                                                    <div class="row">
+                                                        <div class="col-6">
+                                                            <label class="radio-inline radio-btn text-center" for="divingYes">
+                                                                <input class="radio-control" type="radio" name="willing" value=""
+                                                                    id="divingYes" checked="">
+                                                                <span class="radio-custom"></span>
+                                                                <span class="radio-label fs-14 w-100">Yes </span>
+                                                            </label>
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <label class="radio-inline radio-btn text-center" for="divingNo">
+                                                                <input class="radio-control" type="radio" name="willing" value=""
+                                                                    id="divingNo">
+                                                                <span class="radio-custom"></span>
+                                                                <span class="radio-label fs-14 w-100">No </span>
+                                                            </label>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
-
-                                            <div class="col-lg-12 mb-0">
-                                                <label class="checkbox-inline mb-0 w-auto"
-                                                    for="flexCheckDefault2">
-                                                    <input class="checkbox-control" type="checkbox" checked value=""
-                                                        id="flexCheckDefault2">
-                                                    <span class="checkbox-custom"></span>
-                                                    <span class="checkbox-label fs-14">On a cement floor
-                                                    </span>
-                                                </label>
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label for="" class="fs-18 font-bold" >Was it professionally installed & plumed?</label>
+                                                    <div class="row">
+                                                        <div class="col-6">
+                                                            <label class="radio-inline radio-btn text-center" for="willing2N">
+                                                                <input class="radio-control" type="radio" name="willing2" value=""
+                                                                    id="willing2N" checked="">
+                                                                <span class="radio-custom"></span>
+                                                                <span class="radio-label w-100">Yes </span>
+                                                            </label>
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <label class="radio-inline radio-btn text-center" for="willing2">
+                                                                <input class="radio-control" type="radio" name="willing2" value=""
+                                                                    id="willing2">
+                                                                <span class="radio-custom"></span>
+                                                                <span class="radio-label w-100">No </span>
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
