--- a/src/home-insurance/23-property-conditioning.html
+++ b/src/home-insurance/23-property-conditioning.html
@@ -212,7 +212,7 @@
                                                 <div class="f-group max-width-100">
 
                                                     <div class="f-dropdown selectDropdown"><select
-                                                            class="f-control f-dropdown" placeholder="Roofing"
+                                                            class="f-control f-dropdown" placeholder="Enter year roof was replaced in"
                                                             id="selectbuss">
                                                             <option value="">Roofing</option>
 
@@ -222,6 +222,29 @@
 
                                                         </select>
 
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-6">
+                                                <div class="f-group max-width-100">
+                                                    <div class="f-dropdown selectDropdown">
+                                                        <select class="f-control f-dropdown" placeholder="Plumbing" id="selectbuss">
+                                                            <option value="1">5 years or less</option>
+                                                            <option value="2">5-10 Years</option>
+                                                            <option value="3">More than 20 Years</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-6">
+                                                <div class="f-group max-width-100">
+                                                    <div class="f-dropdown selectDropdown">
+                                                        <select class="f-control f-dropdown" placeholder="Electric" id="selectbuss">
+                                                            <option value="1">5 years or less</option>
+                                                            <option value="2">5-10 Years</option>
+                                                            <option value="3">More than 20 Years</option>
+                                                        </select>
                                                     </div>
                                                 </div>
                                             </div>
