--- a/src/home-insurance/23.1-property-conditioning.html
+++ b/src/home-insurance/23.1-property-conditioning.html
@@ -212,13 +212,13 @@
                                                 <div class="f-group max-width-100">
 
                                                     <div class="f-dropdown selectDropdown"><select
-                                                            class="f-control f-dropdown" placeholder="Roofing"
+                                                            class="f-control f-dropdown" placeholder="Enter year roof was replaced in"
                                                             id="selectbuss">
-                                                            <option value="">Roofing</option>
+                                                            <option value="">Enter year roof was replaced in</option>
 
                                                             <option value="1">5 years or less</option>
                                                             <option value="2">5-10 Years</option>
-                                                            <option value="More than 20 Years" selected>More than 20 Years</option>
+                                                            <option value="More than 20 Years">More than 20 Years</option>
 
                                                         </select>
 
@@ -226,16 +226,6 @@
                                                 </div>
                                             </div>
                                             
-                                            <div class="col-12">
-                                                <div class="input-group date form-control px-0" id="datepicker">
-                                                    <input type="text" class="" id="date" placeholder="Enter year roof was replaced in" />
-                                                    <span class="input-group-append ">
-                                                        <span class="input-group-text border-0 bg-white d-block">
-                                                            <i class="fa fa-calendar"></i>
-                                                        </span>
-                                                    </span>
-                                                </div>
-                                            </div>
                                             <div class="col-12">
                                                 <div class="row g-3">
                                                     <div class="col-md-6 col-12 ">
