--- a/src/home-insurance/25.1-insurance-details.html
+++ b/src/home-insurance/25.1-insurance-details.html
@@ -221,7 +221,7 @@
                                                                 <option value="">Select Company</option>
 
                                                                 <option value="1">5 years or less</option>
-                                                                <option value="2">5-10 Years</option>
+                                                                <option value="2" selected>Other</option>
                                                                 <option value="More than 20 Years">More than 20 Years
                                                                 </option>
 
@@ -232,6 +232,9 @@
                                                 </div>
 
 
+                                                <div class="col-12">
+                                                    <input type="text" placeholder="Enter name of your current company" class="form-control">
+                                                </div>
                                                 <div class="col-12">
                                                     <input type="text" placeholder="Policy Number (Optional)" class="form-control">
                                                 </div>
